<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="juniorvalerav.polisteriaapp.singUpActivity"
    android:background="@android:color/background_light"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="385dp"
        android:layout_height="563dp"
        tools:layout_editor_absoluteY="3dp">

        <ImageView
            android:id="@+id/polisteriaLogoName"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/polisteriaLogoName"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/polisteria_logoname" />

        <EditText
            android:id="@+id/nameEditText"
            style="@android:style/Widget.Material.Light.EditText"
            android:layout_width="261dp"
            android:layout_height="41dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:hint="@string/nameEditTex"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="260dp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="262dp"
            android:layout_height="42dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:hint="@string/pedir_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText"
            app:layout_constraintVertical_bias="0.387" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="263dp"
            android:layout_height="41dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:hint="@string/pedir_password"
            android:inputType="textPassword"
            android:singleLine="false"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button"
            style="@android:style/Widget.Material.Button"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorAccentDark"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>



</android.support.design.widget.CoordinatorLayout>
